force-app/main/default/objects/DSD_Settings__c/DSD_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for the Data Skew Detector App</description>
    <label>Data Skew Detector Settings</label>
</CustomObject>