force-app/main/default/objects/DSD_Settings__c/fields/Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Name__c</fullName>
    <description>The API name of the child object to look for data skew on</description>
    <inlineHelpText>The API name of the child object to look for data skew on</inlineHelpText>
    <label>Child Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>