force-app/main/default/objects/DSD_Settings__c/fields/Last_Run_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_End_Time__c</fullName>
    <description>The date/time that the most recent job ended</description>
    <inlineHelpText>The date/time that the most recent job ended</inlineHelpText>
    <label>Last Run End Time</label>
    <type>DateTime</type>
</CustomField>