force-app/main/default/objects/DSD_Settings__c/fields/Last_Run_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Job_Id__c</fullName>
    <description>The job id of the most recent batch job that was run</description>
    <inlineHelpText>The job id of the most recent batch job that was run</inlineHelpText>
    <label>Last Run Job Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>