force-app/main/default/objects/DSD_Settings__c/fields/Last_Run_Processed_Records__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Processed_Records__c</fullName>
    <description>The number of parent records that have already been processed for the most recent job</description>
    <inlineHelpText>The number of parent records that have already been processed for the most recent job</inlineHelpText>
    <label>Last Run Processed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>