force-app/main/default/objects/DSD_Settings__c/fields/Last_Run_Skewed_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Skewed_Record_Count__c</fullName>
    <description>The number of records that were found to have data skew during the the most recent run of the job</description>
    <inlineHelpText>The number of records that were found to have data skew during the the most recent run of the job</inlineHelpText>
    <label>Last Run Skewed Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>