force-app/main/default/objects/DSD_Settings__c/fields/Last_Run_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Start_Time__c</fullName>
    <description>The date/time that the most recent job was started</description>
    <inlineHelpText>The date/time that the most recent job was started</inlineHelpText>
    <label>Last Run Start Time</label>
    <type>DateTime</type>
</CustomField>