force-app/main/default/objects/DSD_Settings__c/fields/Last_Run_Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Total_Records__c</fullName>
    <description>The total number of parent records that the most recent job wil be processing</description>
    <inlineHelpText>The total number of parent records that the most recent job will be processing</inlineHelpText>
    <label>Last Run Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>