force-app/main/default/objects/DSD_Settings__c/fields/Skew_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Skew_Threshold__c</fullName>
    <description>If a parent object has this many child records or more, it will be flagged as having data skew</description>
    <inlineHelpText>If a parent object has this many child records or more, it will be flagged as having data skew</inlineHelpText>
    <label>Skew Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>