force-app/main/default/objects/DSD_Settings__c/fields/Skew_Type__c.field-meta.xml
<CustomField>
    <fullName>Skew_Type__c</fullName>
    <description>Account, Lookup, or Owner</description>
    <inlineHelpText>Account, Lookup, or Owner</inlineHelpText>
    <label>Skew Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>